빈 후 처리기를 이용해서 빈 등록 전/후에 원하는 작업 처리(ex proxy로 교체 등)

--- a/proxy-start/build.gradle
+++ b/proxy-start/build.gradle
@@ -20,6 +20,9 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	//spring 제공 빈후처리기 사용을 위해 추가
+	implementation 'org.springframework.boot:spring-boot-starter-aop'
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
