--- a/aop/src/main/resources/application.properties
+++ b/aop/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 
+#default는 CGLIB로 properties에서도 설정할 수 있다
+#CGLIB
+#spring.aop.proxy-target-class=true
+#동적 프록시
+#spring.aop.proxy-target-class=false
