로그 출력 AOP, 재시도 AOP, 내부 호출 시 문제 해결 방식들: 자기 자신 주입, 지연 주회,근본적인 구조 변경, 프록시 기술의 한계(동적 프록시 이용 시 구체 타입 캐스팅/구체 타입 의존관계 주입 불가), CGLIB 경우 final 사용 불가 문제 있지만 기본적으로 사용한다

--- a/aop/src/main/resources/application.properties
+++ b/aop/src/main/resources/application.properties
@@ -4,3 +4,8 @@
 #spring.aop.proxy-target-class=true
 #동적 프록시
 #spring.aop.proxy-target-class=false
+
+
+#spring 2.6부터는 순환 참조를 기본적으로는 금지하도록 변경했다
+#순환 참조를 허용하기 위해서는 다음을 추가
+spring.main.allow-circular-references=true
